--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 html {
     box-sizing: border-box;
 }
@@ -9,4 +11,35 @@ body {
     justify-content: center;
     align-items: center;
     background: rgb(37, 37, 37)
+}
+
+#button-container {
+    padding: 10px;
+    border: 2px solid black;
+    box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.7);
+    border-radius: 7px;
+}
+
+#btn-start {
+    outline: none;
+    cursor: pointer;
+    width: 120px;
+    height: 75px;
+    font-family: Roboto, sans-serif;
+    font-size: 25px;
+    text-shadow: 0px 2px 5px black;
+    color: white;
+    background: linear-gradient(to top, #696969, #575757);
+    border: 2px solid black;
+    border-radius: 7px;
+    box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 12px 12px 0 rgba(0, 0, 0, 0.3);
+}
+
+#btn-start:hover {
+    background: linear-gradient(to bottom, #696969, #575757);
+}
+
+#btn-start:active {
+    transform: translateY(3px);
+    box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.4), 0 6px 6px 0 rgba(0, 0, 0, 0.3);
 }
