--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     background: rgb(37, 37, 37)
 }
 
-#button-container {
+#container {
     padding: 10px;
     border: 2px solid black;
     box-shadow: inset 0 20px 4px -19px rgba(255, 255, 255, 0.7);
